--- a/Smart Home/forms/ApartementForm.resx
+++ b/Smart Home/forms/ApartementForm.resx
@@ -120,101 +120,138 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAABk9JREFUeF7t
-        m12IVVUUx/Uh7ZOKIijfyupBTO89oyUSjM45dxQzwhgixZlz7sBApkZGBNFL0GNRFEEf1ltEUtAXgmM6
-        EpT6YONLPfTdpIVPYSN92Fxva41/Y53d3nfve2b03utdP/i/7P9ae/ZZ+5y9zzn3zBxFURRFURRFURRF
-        URRFURRFUZTdu+vz9+yvbR8dmzpEOkWqqxqKa3Ro71ht665d9XkoYzH27asvGB2rHTX+gCpYtXGuIcrZ
-        HHzma/FnQ7UvCl0JWHYsHaqaV+1hlDWc0QNTh+2dqQroIMoaDiVNGp2oimsSZQ3H0olqBkJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulDUcWyfdoBdfH6+v2rCjXk6yhuKYl3YetfZhE8oajq2TblBI8c9p1f2PWfuw
-        CWUNx9ZJN0gnoMXiZSVoCaLi6xLUQUJZw7F1oioulDUcWyeq4kJZw7F1oioulDUcWyeq4kJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulNVPFA+voweNY+aDh2pmipLs51KluhZldsOBtg5Us6IJlNmNTsB5lX8C+DLR
-        STgvmij3pWtQZj+2jURVXChrOLZOVMWFsoZDSfpZymzpwNRJlDUcSuSPce0dqprSnrGpz1HWcPYeqG2z
-        daZqXnv217agrOHg49xxW4eqcNGJfKTwZ+r4PF0noaC4+KOj9ZtQzmLw7PE/G/A6Rp3qxuzXJNeKl50Z
-        /4OGoiiKoiiK0iznflkL/SWo0+PbDh44HcB/78LR7KTT49uKlfdWrxKDZzX8J7UoGrnEiD8Ny4kR733d
-        SzH/yHj+m7CsUMwpGb+od8uVsNqfJX2Dt8nBlyvZt7CsLO1Nr8nFJ9lvsJwY8SETcFLGR/HI1bCsUMx3
-        Mr7cP7wQVvtTiqtxbvBJ9hksK0tWDy4w4o/DcmLE+yegkv0q46P+kRthWaGYgzK+lAz1wWp/6GCfkYMv
-        V6qvwbKyNElvzcUn2TewnBjx3gmIkvR7GR+tHroFlpVynL0h40tJ9jSs9ocGfMgY/IOwrESV7E4ZTwd/
-        BJaTXDwJzU5oUx2X8T39w8thWaGTZpOMp5Oq+R9VWkHPmurtNOAzYvBnfJc7nZ0DIp71ASwnRnzAHpB+
-        nMuJ0w2wrGBZzB0HX6mw25dyJX1eDJrP/jFYTujselTmlOPqy7Cc5OJJaHZCMa/IeJr0R2A5oSvxU5lD
-        x/IsrPYk6h25ngb9uxx0FKcbYTuJkupzMofO1idhOcnH+yegVMmekvEhxaSbiUGZQ5q8o7L5BtjtBw3w
-        hdyA6c6jtze9FLYTiv0wn1fdBMtJLp6EZielJN1s5HiXuRUrBi6juBO5PLrCYbcXUX9WpgGeloOlzXU7
-        7IaYdyg98XAJlhMZz0Kzk1JS7cnleJ5NzvG/5ZEe6Hwb+AWHz3Ia2FfGQH9cuHbbfIQ44SdMipWb3RSf
-        ebCdiPhpodlJtH7kcoqriZwaLSdXwHaCY5sQeawvQ67sC4a58U6rkq6H3RC6G7nLyP0aVkOMHO8EMHzW
-        y5ylfekyWA2JKul9Mo/F+xbs1kIH9YA5ONI7sL3wMpXPre6C1ZB8TuAEJNl7ubw42wrLC51Q7+Zy+aql
-        Y4fdOoy3hqyJxes2XgvbCxX8bZlPm+UOWA2ROSw0N4Q298dlDt0ZvQXLy/K+wessx/oT7NZhDOqPZjco
-        yvlB5Nd7kqGVsBoic1hobki5P71b5vDmDysIPLH/Kfpo/QTwjxU0EN6kJuiSvAfNQfAbRnEwrL9CNmDG
-        yAuaAGzEf8u8ZXH1ZthB8DFS3tnjbeZ7/3aE12BZDFqOPoHlJZ8XNgEM/c39Mi+Ks4dgdR9UjI9kMXiN
-        huUll0dCsxfaY56QebSsvA+ru1g0MDCPCjCZK0acLobtReax0Oyl1F9dYuSeCnleuejoqaSJUYhj1Dz3
-        rOvHyA2eAGJuOUl/kbkd9WPLbEHLz6uyCHRHshNWEDKXheYgKP7NXD6NBVb3QAd+PFeEJu8ocrkkNAeB
-        OzeZ7/0J9KKDDlr+N/4J31cKJiJ3WmgOAl9hyLecnfXZyWzAZyEe4o41+/zAiOI1PQEMv6uivOPTY+j0
-        +/lWMNMJUGaITkCL0QloMToBLcZ4C9t9dzGtRtxFdf5bSUVRFEVRFEVRuog5c/4FqsnEICIzt58AAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABzRJREFUeF7t
+        nXfovVMcx7/23iOzrJQQRYQ/lKTsLStFhGREoexR+EdWspKRrDIiGWVmk0SEbNlb9ny/+n2f+vh0nvu9
+        z73nuc85zz2vetX3e7/3nns+z3nm54zvTKHQBgvJ+eb9WOia/eR38ke5Ly8UuuVz+e+sn/JCoVuqxqgs
+        dExpkMQoDZIYpUESozRIYpQGSYzSIIlRGiQx3pdVY7zHC4Vu2VF+Mis/F2ZZRJ4p75bb8ULP2UHeL6+Q
+        S/FCapwmq1PHn3If2VeIjRireC+RyXGTrCrY50bxjYH3yOTYRvqK9q1RQo3B79vLJKmrcIxGWUBuIU+S
+        18onJXdV38o/5O+zP/PaE5L3nCj5DJ8dlzZja5WYFacncDd5p/xe2jKbyGfvkJRFmU3JtjEq6gLYSw7D
+        CvIc+aW0ZcSQMs+Wy8th2Ftm3RgVoUahm3VRWcfi8nz5k7Sfa0Pqcq5cTNbB33if/VyWjVHhG+UvuYwM
+        sYu0T90h6aK9RR4reQ5YTy4nOQ0hP/MafztO8t7PZKisSq45O8kQy0rqXL0368ao4DTFXkZgZ/CCgwfK
+        y6XdSFZOMdznbyZHZXN5qfxKhr7jH8nfF5aesyR1J4ZhT7nJw2lq6Xk//o9V5UsytJE+khwJg04pTeGU
+        yJHzsQx95wtyFemh7oNOtb1gbfmO9BuFW1j21iVlW9DIXNh/k/77OYWtL6cKzvOhc/sbciM5KTaWb0pf
+        D+pGHacCTlPvSr8RbpdLyEnDkchzjq8PdQydvnoFF/DQNYOL+vyyK/husra+XlxTqHNvCQV9pUwF7uZ8
+        /bie9RKeM3ywt8kujwwPdfGnL26J655TsoW7Gu5ebKBvyRQ7driOcXNh6/qB7OL61hqkQ2yA3G5O8m6q
+        KZtIsse2zuTWegFJPJ8POk+mzoXS1pkYSM1kD3uWDYwn8JhP323BKYqBE7bupFGyhoSfT6GTDsmFE6St
+        O7GM0p+SDLtLH1AOR0cFuS+fkNxVZou/hUxydMYcXCZtDGQUsoR+bN/tOk4KvSvok7cx0G8fo49+4mwp
+        bSB0LuU4U5Y6+0Qo/SvZwYgPGwS9d7lyq7SxcLHPDobh2CByurvyHC9tLFfL7HhK2iDo584VBnHbWB6X
+        2eEHLKwjc4XOKhsLebmJc5H8VdqKhKRyoWkAX0v7vmHHQaUI48RsLDybeMbdXgPZVIYKq5MUg8cn50Ij
+        OnKBTiobC8lRS4ztNZAYX+AHEOTc89Z5g8AF8mcZKtBadwj6HNaKMldWkjaWL6Rn3O3VOn4gw1oyV9aV
+        NhaGL2XHi9IGsbXMFea+2FgY/JAdN0sbxOEyV46QNhZmi2XHqdIGcbHMFepuYzlFZsfO0gbxvMyVZ6WN
+        hdiygwHKjNOtgvhbcreSG/Sj+ykJTFPIEnI+VSB4iMyNA6WNgbmN2XKytMEwGTM3HpE2Bq6N2bKatDOo
+        GAW4gcwFnj+oc1V/Tl1ryqy5S1YBYU63jNdIW/f7ZPaw7okNiov7hjJ1SLnbmxLsJOXRBo9JGxjn5dT7
+        1++Vts7c+vYGn3rAlO+4mGnr69u7FY4Y5GADZHlwLpqpsYYkm2vrypJTvYP0ux8F+KpkdGAqMEzUjwVg
+        kDWN1EsOkjZYvEGmQmi+PInFXkMD+KCPll1zsPT1YsGa3sOs19ekDZyHxy4TdlywfZcznVDZ5qyaQu+h
+        7+L9RW4lJw1z1bnBsHXhupHyDK9W2Fb6vZJGmuSEfVaTYMyxrQNHa+8meVqYI8I/XWF9Ef+ku7/kyd1u
+        kLcl46DahrS6n9xJ3uowaaGOHEHM/Mp6bgj45Zk+lB6W7LMbBckKtzmOi7Iflf57T5cWsgl2wB+x9Gat
+        LGR6cQgm59v34Y2yjfQKZVK2/76rZAj7L5Uwy0YJNQa/s+ZhCCbAkEm178dDZWwo03/PA3JBGWIPGYol
+        m0ZhjUKfJaUf4QA5CG6HX5H2c9/IlWUsQtmC12XdKncVdTHRm5g0dUfGsHsTKQq/wa6Tsbhe2rK5qxu2
+        w2nc2CYOa5nEqPCe0pbBrXGMo4SllvwAcO4Am1DXKMSeHC9LX9FR956HpS3rSDkuR0lb5oNyFEKNwpJT
+        yWEHA4zTGODHdLXhOA9/vlHYgZKDJ2wqxt4ybl6KHJLdeG0414V8LjhNcVZ4SKbYrxOd0EaMaaEhoY0Y
+        00JDYm/A2OVNHbE3YOzypo7YGzB2eVNH7A0Yu7ypw29AP1mStP0P0r9vWAsNYPXr0EasphOTBrFzNkax
+        0AC/ckKlbRA7Kn0UCw3xG9CfslgiyQ9OaGKhIX5p2dXlqJDWt2VRdqEhz0m7EelRHKVRaAz+Raot6xlZ
+        aMgx0m7EmJKKLzSEkSG+jyWGrMKQ9dq7XTLof1SNIst9UGZhDNibGYz9tBzl/xvyGT7LaaocGS1BHzun
+        nlADIKtGxBytUhgCxlGx17P3k0LB6kioG2NVKBQKhUJPmZn5D4ZR0rDZQaczAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAABk9JREFUeF7t
-        m12IVVUUx/Uh7ZOKIijfyupBTO89oyUSjM45dxQzwhgixZlz7sBApkZGBNFL0GNRFEEf1ltEUtAXgmM6
-        EpT6YONLPfTdpIVPYSN92Fxva41/Y53d3nfve2b03utdP/i/7P9ae/ZZ+5y9zzn3zBxFURRFURRFURRF
-        URRFURRFUZTdu+vz9+yvbR8dmzpEOkWqqxqKa3Ro71ht665d9XkoYzH27asvGB2rHTX+gCpYtXGuIcrZ
-        HHzma/FnQ7UvCl0JWHYsHaqaV+1hlDWc0QNTh+2dqQroIMoaDiVNGp2oimsSZQ3H0olqBkJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulDUcWyfdoBdfH6+v2rCjXk6yhuKYl3YetfZhE8oajq2TblBI8c9p1f2PWfuw
-        CWUNx9ZJN0gnoMXiZSVoCaLi6xLUQUJZw7F1oioulDUcWyeq4kJZw7F1oioulDUcWyeq4kJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulNVPFA+voweNY+aDh2pmipLs51KluhZldsOBtg5Us6IJlNmNTsB5lX8C+DLR
-        STgvmij3pWtQZj+2jURVXChrOLZOVMWFsoZDSfpZymzpwNRJlDUcSuSPce0dqprSnrGpz1HWcPYeqG2z
-        daZqXnv217agrOHg49xxW4eqcNGJfKTwZ+r4PF0noaC4+KOj9ZtQzmLw7PE/G/A6Rp3qxuzXJNeKl50Z
-        /4OGoiiKoiiK0iznflkL/SWo0+PbDh44HcB/78LR7KTT49uKlfdWrxKDZzX8J7UoGrnEiD8Ny4kR733d
-        SzH/yHj+m7CsUMwpGb+od8uVsNqfJX2Dt8nBlyvZt7CsLO1Nr8nFJ9lvsJwY8SETcFLGR/HI1bCsUMx3
-        Mr7cP7wQVvtTiqtxbvBJ9hksK0tWDy4w4o/DcmLE+yegkv0q46P+kRthWaGYgzK+lAz1wWp/6GCfkYMv
-        V6qvwbKyNElvzcUn2TewnBjx3gmIkvR7GR+tHroFlpVynL0h40tJ9jSs9ocGfMgY/IOwrESV7E4ZTwd/
-        BJaTXDwJzU5oUx2X8T39w8thWaGTZpOMp5Oq+R9VWkHPmurtNOAzYvBnfJc7nZ0DIp71ASwnRnzAHpB+
-        nMuJ0w2wrGBZzB0HX6mw25dyJX1eDJrP/jFYTujselTmlOPqy7Cc5OJJaHZCMa/IeJr0R2A5oSvxU5lD
-        x/IsrPYk6h25ngb9uxx0FKcbYTuJkupzMofO1idhOcnH+yegVMmekvEhxaSbiUGZQ5q8o7L5BtjtBw3w
-        hdyA6c6jtze9FLYTiv0wn1fdBMtJLp6EZielJN1s5HiXuRUrBi6juBO5PLrCYbcXUX9WpgGeloOlzXU7
-        7IaYdyg98XAJlhMZz0Kzk1JS7cnleJ5NzvG/5ZEe6Hwb+AWHz3Ia2FfGQH9cuHbbfIQ44SdMipWb3RSf
-        ebCdiPhpodlJtH7kcoqriZwaLSdXwHaCY5sQeawvQ67sC4a58U6rkq6H3RC6G7nLyP0aVkOMHO8EMHzW
-        y5ylfekyWA2JKul9Mo/F+xbs1kIH9YA5ONI7sL3wMpXPre6C1ZB8TuAEJNl7ubw42wrLC51Q7+Zy+aql
-        Y4fdOoy3hqyJxes2XgvbCxX8bZlPm+UOWA2ROSw0N4Q298dlDt0ZvQXLy/K+wessx/oT7NZhDOqPZjco
-        yvlB5Nd7kqGVsBoic1hobki5P71b5vDmDysIPLH/Kfpo/QTwjxU0EN6kJuiSvAfNQfAbRnEwrL9CNmDG
-        yAuaAGzEf8u8ZXH1ZthB8DFS3tnjbeZ7/3aE12BZDFqOPoHlJZ8XNgEM/c39Mi+Ks4dgdR9UjI9kMXiN
-        huUll0dCsxfaY56QebSsvA+ru1g0MDCPCjCZK0acLobtReax0Oyl1F9dYuSeCnleuejoqaSJUYhj1Dz3
-        rOvHyA2eAGJuOUl/kbkd9WPLbEHLz6uyCHRHshNWEDKXheYgKP7NXD6NBVb3QAd+PFeEJu8ocrkkNAeB
-        OzeZ7/0J9KKDDlr+N/4J31cKJiJ3WmgOAl9hyLecnfXZyWzAZyEe4o41+/zAiOI1PQEMv6uivOPTY+j0
-        +/lWMNMJUGaITkCL0QloMToBLcZ4C9t9dzGtRtxFdf5bSUVRFEVRFEVRuog5c/4FqsnEICIzt58AAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAA1dJREFUeF7t
+        nE1uE2EQRM0CxBXycyEOAGcgCgeDdbgCIYKEI8AmQkgs+Al7qBZYHsxgT1n297pn5kklRaYXr8rGkIW9
+        2AMPlGfKlfJD+TmxROfXyrkSW6AcK++UPtEp5kY5UhDi1TA/Gf/mWrmvNCfepvqE5iwWZ0pz4t+MrsSF
+        cqJMjegc3btbXCrNuVO6ElN8MpacKt0tvivN6QpEpg6+By6QDHwPXCAZ+B64QDLwPXCBZOB77CIQvzDd
+        +/3j6Nhlj73iCjxRvijxX8LH8cDIcPfYO67AJ2V5+zEeGBndLSLNcQXc+2rg/VwB974aeD9XwL2vBt7P
+        FXDvq4H3cwXc+2rg/VwB974aeD9XwL2vBt7PFXDvq4H3cwXc+2rg/VwB974aeD9XwL2vBt7PFXDvq4H3
+        cwXc+2rg/VwB974aeD9X4IOyvH0fD4yM7haR5rgCj5TbP4mfx4a7x97BBZKB74ELJAPfAxdIBr4HLpAM
+        fA9cIBn4HrhAMvA91gXm/J2mPFT6JOas0pT4fGGfxJxVmtMnMWeV5uACycD3wAWSge+BCyQD3wMXSAa+
+        By6QDHyPXQTmT1AdEFdg/gTVgXEF5k9QHRhXwL2vBt7PFXDvq4H3cwXc+2rg/VwB974aeD9XwL2vBt7P
+        FXDvq4H3cwXc+2rg/VwB974aeD9XwL2vBt7PFXDvq4H3cwXc+2rg/VwB974aeD9XwL2vBt7PFXDvq4H3
+        cwXmT1AdGFdg/gTVgcEFkoHvgQskA98DF0gGvgcukAx8D1wgGfgeuEAy8D1wgWTge+ACycD3wAWSge+B
+        CyQD3wMXSAa+By6QDHwPXCAZ+B64QDLwPXCBZOB74ALJwPfABZKB74ELJAPfAxdIBr4HLpAMfA9cIBn4
+        HrhAMvA9cIFk4HvgAsnA94hvZOgKnCpTJbp3t4htmnOldCUulBNlasST8VLpbnGpNOdc6UrMWeWp0pz4
+        IswbpU9oynmjxLceIRwp10qf2BTzVolNUOLVcKa8Uu6UPtExJzpH93ibwv5mbGJd+H8MvWvFUJ+hd2kY
+        Kjz0rhVDfYbepeGbsi69LV8VmqreW3mh9MlvynOFpqr3VuKXw89KX4G+xO2xQlPVexAhGq+eTW8D8Wdx
+        k6kU7L1Y/AIiPte2aFFwgAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAABk9JREFUeF7t
-        m12IVVUUx/Uh7ZOKIijfyupBTO89oyUSjM45dxQzwhgixZlz7sBApkZGBNFL0GNRFEEf1ltEUtAXgmM6
-        EpT6YONLPfTdpIVPYSN92Fxva41/Y53d3nfve2b03utdP/i/7P9ae/ZZ+5y9zzn3zBxFURRFURRFURRF
-        URRFURRFUZTdu+vz9+yvbR8dmzpEOkWqqxqKa3Ro71ht665d9XkoYzH27asvGB2rHTX+gCpYtXGuIcrZ
-        HHzma/FnQ7UvCl0JWHYsHaqaV+1hlDWc0QNTh+2dqQroIMoaDiVNGp2oimsSZQ3H0olqBkJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulDUcWyfdoBdfH6+v2rCjXk6yhuKYl3YetfZhE8oajq2TblBI8c9p1f2PWfuw
-        CWUNx9ZJN0gnoMXiZSVoCaLi6xLUQUJZw7F1oioulDUcWyeq4kJZw7F1oioulDUcWyeq4kJZw7F1oiou
-        lDUcWyeq4kJZw7F1oioulNVPFA+voweNY+aDh2pmipLs51KluhZldsOBtg5Us6IJlNmNTsB5lX8C+DLR
-        STgvmij3pWtQZj+2jURVXChrOLZOVMWFsoZDSfpZymzpwNRJlDUcSuSPce0dqprSnrGpz1HWcPYeqG2z
-        daZqXnv217agrOHg49xxW4eqcNGJfKTwZ+r4PF0noaC4+KOj9ZtQzmLw7PE/G/A6Rp3qxuzXJNeKl50Z
-        /4OGoiiKoiiK0iznflkL/SWo0+PbDh44HcB/78LR7KTT49uKlfdWrxKDZzX8J7UoGrnEiD8Ny4kR733d
-        SzH/yHj+m7CsUMwpGb+od8uVsNqfJX2Dt8nBlyvZt7CsLO1Nr8nFJ9lvsJwY8SETcFLGR/HI1bCsUMx3
-        Mr7cP7wQVvtTiqtxbvBJ9hksK0tWDy4w4o/DcmLE+yegkv0q46P+kRthWaGYgzK+lAz1wWp/6GCfkYMv
-        V6qvwbKyNElvzcUn2TewnBjx3gmIkvR7GR+tHroFlpVynL0h40tJ9jSs9ocGfMgY/IOwrESV7E4ZTwd/
-        BJaTXDwJzU5oUx2X8T39w8thWaGTZpOMp5Oq+R9VWkHPmurtNOAzYvBnfJc7nZ0DIp71ASwnRnzAHpB+
-        nMuJ0w2wrGBZzB0HX6mw25dyJX1eDJrP/jFYTujselTmlOPqy7Cc5OJJaHZCMa/IeJr0R2A5oSvxU5lD
-        x/IsrPYk6h25ngb9uxx0FKcbYTuJkupzMofO1idhOcnH+yegVMmekvEhxaSbiUGZQ5q8o7L5BtjtBw3w
-        hdyA6c6jtze9FLYTiv0wn1fdBMtJLp6EZielJN1s5HiXuRUrBi6juBO5PLrCYbcXUX9WpgGeloOlzXU7
-        7IaYdyg98XAJlhMZz0Kzk1JS7cnleJ5NzvG/5ZEe6Hwb+AWHz3Ia2FfGQH9cuHbbfIQ44SdMipWb3RSf
-        ebCdiPhpodlJtH7kcoqriZwaLSdXwHaCY5sQeawvQ67sC4a58U6rkq6H3RC6G7nLyP0aVkOMHO8EMHzW
-        y5ylfekyWA2JKul9Mo/F+xbs1kIH9YA5ONI7sL3wMpXPre6C1ZB8TuAEJNl7ubw42wrLC51Q7+Zy+aql
-        Y4fdOoy3hqyJxes2XgvbCxX8bZlPm+UOWA2ROSw0N4Q298dlDt0ZvQXLy/K+wessx/oT7NZhDOqPZjco
-        yvlB5Nd7kqGVsBoic1hobki5P71b5vDmDysIPLH/Kfpo/QTwjxU0EN6kJuiSvAfNQfAbRnEwrL9CNmDG
-        yAuaAGzEf8u8ZXH1ZthB8DFS3tnjbeZ7/3aE12BZDFqOPoHlJZ8XNgEM/c39Mi+Ks4dgdR9UjI9kMXiN
-        huUll0dCsxfaY56QebSsvA+ru1g0MDCPCjCZK0acLobtReax0Oyl1F9dYuSeCnleuejoqaSJUYhj1Dz3
-        rOvHyA2eAGJuOUl/kbkd9WPLbEHLz6uyCHRHshNWEDKXheYgKP7NXD6NBVb3QAd+PFeEJu8ocrkkNAeB
-        OzeZ7/0J9KKDDlr+N/4J31cKJiJ3WmgOAl9hyLecnfXZyWzAZyEe4o41+/zAiOI1PQEMv6uivOPTY+j0
-        +/lWMNMJUGaITkCL0QloMToBLcZ4C9t9dzGtRtxFdf5bSUVRFEVRFEVRuog5c/4FqsnEICIzt58AAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABOBJREFUeF7t
+        nMuv1VQUxo+8NCCPGIYSNIZoeARHSpjJCAbIQEVHDCUMDGMSSEgIjyky0YETAyQaCQMcmJiIGmL8C3xg
+        otH4QKJGHkYeCn5fY5N99tqnZ/eednf39vslv8Fdt109Xb2ne3fdtqMJLIYvwtPwS3gT3pczeQOylqzp
+        C5A1jmIXvAxDSWVzssbPw4ksgMdhaGXZjvfgMcjaG3QwuvMoHIOnKR4td6Fb8CR8Fi6DYjZYQ9bydcja
+        urVm7XfCAg4u/pjxI9wMRTs8DVljt+Zfw2Kg52zK/QWPng5G+/Cg+N8Uzr6KaZgb5GlKpOEUdGv/Nhx9
+        5QToM1CkYQt0a8/rlOKCxQ0+DEUaWGu39tfhWICKtJj6m4BIiqm/CYhKmq6XyWcCopKm62XymYCopOl6
+        mXwmIEYPwCPw8eKncabVi+twXeaIweQzATF6BbIWtyEvlFfAkkn1WgoPw78h4y/DGEw+Exg4D8HvoFuT
+        n+GrkG1yN075TXgJfu/E6A+QB2ka7jrUBgbOPujXpPTzyFgpc03DX8cGBg6/BXvgFejXJtbf4X64EE7D
+        X9cGRAHbGhwT/I5slXcgx5xVMBY/hw2IMdbBd6FfJ98P4QZYFz+PDYgxeEAuQL9OvjogLcPTzglY95T1
+        JlwNY/Fz2MDA0aCeGZr2ZkbowvAnqAvDDmHbg7WYpXWyG8Zg8pmAUHOxTzRdL5PPBEQlTdfL5DMBUUnT
+        9TL5TEAkxdTfBERSTP1NQCTF1N8ERFJM/U1AJMXU3wREUkz9TUAkxdTfBERSTP39gOzWYFB2p97SkJF8
+        eKp4jCr0S5neL+DoLSdAz0GRBtbarT2PxWibE6D/wE1QtMt6eBe6tX8OFv8n/ub/QOkHULQLa+zWnMeA
+        x6LAf3kA3Q5FO+yAfr2Llwa4fAr9hWQaP4Pmf/B8YYD/AhrZvqz5VhjkDAytJNuTrzaZyKPwLxhaUTYv
+        7+FaCyvhG87clXiz2BNQzMZjsLyJrtS8uCzEcvgLdFe8CBdBMTf4HqyPoVvTX6F7R2Qle6G7Mj0LY+5V
+        FeM8At+Hfj1Z42h4Gz2nYn4SXry8Bp+ES6AI8yDcCA9C/2xDL8GYRxXG4GDDx4H9ZHUNsQa+B/k6Inoe
+        8iDXpYs8oX2sI1/tx+3NiafgtzCUOFYffhg+0OIv9wes80G7yuMvV0e+25KPyM3ESvgG9BthsfrwLzG0
+        HOXDlbF0lSe03DQ5U+Xr/DhhagxO2w7BT+BV+C8MbdzXh6eE0HL0Goylqzyh5XzZMecs6iN4APL6Lluq
+        CvAnjCW3PL2FA2Zo5+k7MJbc8vQWzl44YPo7/xus89XOLU+v4eyFAybP0ZR/iXPZ+dzyCCGEEIOBg2cT
+        vaeS3PNlDXe2id5TSe75sqep3lNJ7vmyh6eA0M5Szv3rknu+7Kna4bn0jHLPlz1N94xyz5c9TfeMcs/X
+        CzhbabJnlHs+IYQQYt7AQbLN3lDf8yeFO9Nmb6jv+ZPTdm+o7/mTw694aGco5/iz0vf8yanaoSZ6Q33P
+        n5y2e0N9z5+ctntDfc/fCZyNtNkb6nt+IYQQIhs46HXZ6xn69sfgh+my1zP07Ru67vUMffsGfkVDH4Zy
+        zt42Q9++oeoDpej1DH37hq57PUPfvqHrXs/Qtx+Es4kuez3zbPuj0X9lhXGlnVs6YgAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAiVJREFUeF7t
+        3D2K3jAABuGvytk2kJxrk2vmZ/cYiQSuhJvp9BgNvI1RMYOx3fl1OBwOh8NGfB/7HPv38P0Z+za2PVP0
+        LuCJ+xjbnjvxJ2977qSfvO3hhCNcHycc4fo44QjXxwlHuD5OOML1ccIRro8TjnB9nHCE6+OEI1wfJxzh
+        +jjhCNfHCUe4Pk44wvVxwhGujxOOcH2ccITr44QjXB8nHOH6OOEI18cJR7g+TjjC9XHCEa6PE45wfZxw
+        hOvjhCNcHycc4fo44QjXxwlHuD5OOML1ccIRro8TjnB9nHCE6+OEI1wfJxzh+jjhCNfHCUe4Pk44wvVx
+        whGujxOOcH2ccITr44Qvvoz9HJu/y/g79uO6tsL1ccIX8was7vPaynpmezjhi/lkrO7zr0Yr65nt4YQv
+        5mtqdZ9/NlpZz2wPJ3xx98p6H1tZz2wPJ3wxP+Dzpswn5XzUIbg+TjjC9XHCEa6PE45wfZxwhOvjhCNc
+        Hycc4fo44QjXxwlHuD5OOML1ccIRro8TjnB9nHCE6+OEI1wfJxzh+jjhCNfHCUe4Pk44wvVxwhGujxOO
+        cH2ccITr44QjXB8nHOH6OOEI18cJR7g+TjjC9XHCEa6PE45wfZxwhOvjhCNcHycc4fo44QjXxwlHuD5O
+        OML1ccIRro8TjnB9nHCE6+OEI1zfKvz0bc+d9JO3Pb/H7sSfuF9j2/N1bIreBTxps/Ft7HA4HA6HDXi9
+        /gP/MZOE3cvLPgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAB4lJREFUeF7t
+        ncerJUUUh5+YxZwzJhDMLkRRd4qYF2YXIqiYRURMCOaImNCF/4ARcwbduDAnBBMKgjnnnP19zDRzPNPv
+        vg51ztxm+oMP7rzXVb+auvd2qKruNzMyMjIyMjIyMjJlLCNPlc/Jn+S/i7n0wbPyFEnfpLK+fEXWNWx0
+        ZuZluZ5MgXd/fDPm9iW5tAyH3VRdA0YX9iQZDscMG/qgZBe2uLOBfEjavnlGhvOjtKE0ZGQeG0rbNz/I
+        cGwgjvyf9P5JDxwY6f2THjgw0vsnPXBgpPdPemBBNpJ3Sw62eJ/cUs5G2+0hvX/SAwtB534tffu/kfzO
+        03b7Cr99OOmBheCT7tteeZf0tN2+wm8bTnpgIdjl+LZXfi89bbev8NuGkx5YiEkd/J30tN2+wm8bTnpg
+        ITgg+7ZX3ik9bbev8NuGkx5YCM6OOCD79n8lGfLwtN2+wm8fTnpgQTg74oDMMQD5pE/q3LbbQ3r/pAcO
+        jPT+SQ8cGOn9kx44MNL7Jz1wYKT3T3rgwEjvn/TAgZHeP+mBhnXl4fIG+bh8R3Kt8If8TL4gH5O3yJPl
+        znJJmUl6/2QHri5PkyxC89lN5A27Xe4rM94cnx9OViALza6XflFFH9+XLGNaTkbhM8OJDmRx2Vly0uBe
+        Xz+QB8sIfFY4kYFbSI4DPsP6urxRHiS3luzSlpovr7eR/I5t3pB1dVQ+INeQJfEZ4UQF7iNn+1Z8IS+S
+        XRbksW7sYvmlrKv7Q7mTLIWvP5yIwGPkn9LXzRQqyzGXl31ZQbIyvW4El5Xr+8kS+LrDKR14lPxb+no5
+        fY1YFbmOvF/6PE6dS7wpvt5wSgaym/pL2vr4d8YiZb4tPvsXuavsg60PwykVuIlkssfW9bs8TGbBRSbf
+        DNuGT2WfxeO2LgynRCAXaP5Cj2NIqf14Gw6Q/vj1hFxCdsHWg+GUCDxD+nrOlouK86RvDycaXfD1hNM3
+        kPN+Vm3YOrjHpOsnsgRkPyxtmzhNXlm2xdaB4fQNvFra8t/K0hdnXVhLMm9u23ahbIstj+H0CVxR+v/0
+        +XJauEDatnEd1PYayJbHcPoEnihtWa7AV5LTAh8YhvFtG4+WbbBlMZw+gU9JW7bLLiGaS6Rt45OyDbYs
+        htM1kIE/f3q5lZw2GJy0beQ6ZVXZFFsWw+kayAisLfem5GB+nGQCiZvtOcAz//GevFceL1eRpaCuEyTL
+        RMkgi0yyacOxkg/OW9K29UDZFFsOw+kaeLm05dhX/+p+VicjwExUcWXflU0ldTSZY6FN/jjCbqwpthyG
+        0zXQn+e3lXEnlnIyT96UXSRLQf2YVVuZN2mKLxtO18BXpS/bVSaemOPYS7L+lqF15DU/43dzTU61kUeJ
+        NMWXDadrIIN2vix+JC+Vu0n28XTsjpIzsE9kXZk+UifXGztIssjcXV4mP5Z1ZWh7U3zZcLoG/iZtuc8l
+        40VMvc4GD7rhOuA1act2kTqoa9Kjk5jPp020zZal7U2x5TCcroEMrdtyTBS1YU95j/Rv7CTZlnsF95Bt
+        oG2+nqbYchhO10A/97G27MJq8kh5s+RBOCzt+Xm+vOZnN0m2aXP9YGFBnm0rA41NseUwnK6B70pbjguw
+        aWV7advKCsmm2HIYTtdAln7acofIaeUIadv6iGyKLYfhdA1kPa4td4WcVvwUwXWyKbYchtM10H/q2NdP
+        Kwyl2LYeKptiy2E4XQM5iP8jq3JcPU/jw882lnZZEq/XlE2pylWG0yfQPx7wXDltMGFm2/i0bIMti+H0
+        CWQtlC3Louf0Z9xOYFnJ0lLbRibV2mDLYjh9Ahna9g9dbvsfjsR/YBgd5rqnDbY8htM38Fppy3PB2GYf
+        HQVzM35B9lWyLbY8htM3kBtx/E04t8pFzR3StonFGF1GE2wdGE6JwDOlr4fZwUUFa4l9e06XXfD1hFMi
+        kFFVHsVt62HumsXX2bB81a/vfV5OGoWehK0HwykVuLn0KxgZINxbZsGNoGTaNjDHzpRvV2xdGE7JwLqF
+        znxaM3Zf7KZ8Nv/mTeqDrQ/DKR3IhJC9gq+8TXKaXBrOpvwBHGlD20Vxdfh6w4kInO2WNk5DuU4pcfFI
+        HTxMwM/LINkl3gzwdYcTFbi/9MeUSq7oz5FzPTysDhY+METD3H1d3Rwz+u6mLL7+cCIDN5MvSp9RyUAf
+        42EM3XOf+baS3RqffuT1dpK5lislZ0t19y9W8vs+B/A6fEY40YGcbnIN4FfJl5ThG75xXU9tJ+GzwskK
+        ZKHBNbLkozUYm2Lyqet8fhN8ZjjZgQzucTDmnsS6s7G5pAxD6JwctB0o7ILPDyc90MBdTtyly5Tqo/Jt
+        yVkTS4yQ1/yM3zGIyUxf9sBlev+kBw6M9P5JDxwY6f2THjgw0vsnPXBgpPdPeuDASO+f9MCBkd4/6YED
+        I71/0gMHRnr/pAcOjPT+SQ8cGOn9428tHv848QKYr7F9Q1+F49fn8ierxzdl3pvhb/1O+fPdfrnl6Oym
+        LJNlZs7fPzG6sDwQmvVnKbAc1C90G10g09D0USq8+6xtYvKn5KzeUKUPqomwtG/GyMjIyMjIyMjI3MzM
+        /AfDx+uAihxKPwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
