--- a/Smart Home/forms/UserControls/ACControl.resx
+++ b/Smart Home/forms/UserControls/ACControl.resx
@@ -120,29 +120,33 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABOBJREFUeF7t
-        nMuv1VQUxo+8NCCPGIYSNIZoeARHSpjJCAbIQEVHDCUMDGMSSEgIjyky0YETAyQaCQMcmJiIGmL8C3xg
-        otH4QKJGHkYeCn5fY5N99tqnZ/eednf39vslv8Fdt109Xb2ne3fdtqMJLIYvwtPwS3gT3pczeQOylqzp
-        C5A1jmIXvAxDSWVzssbPw4ksgMdhaGXZjvfgMcjaG3QwuvMoHIOnKR4td6Fb8CR8Fi6DYjZYQ9bydcja
-        urVm7XfCAg4u/pjxI9wMRTs8DVljt+Zfw2Kg52zK/QWPng5G+/Cg+N8Uzr6KaZgb5GlKpOEUdGv/Nhx9
-        5QToM1CkYQt0a8/rlOKCxQ0+DEUaWGu39tfhWICKtJj6m4BIiqm/CYhKmq6XyWcCopKm62XymYCopOl6
-        mXwmIEYPwCPw8eKncabVi+twXeaIweQzATF6BbIWtyEvlFfAkkn1WgoPw78h4y/DGEw+Exg4D8HvoFuT
-        n+GrkG1yN075TXgJfu/E6A+QB2ka7jrUBgbOPujXpPTzyFgpc03DX8cGBg6/BXvgFejXJtbf4X64EE7D
-        X9cGRAHbGhwT/I5slXcgx5xVMBY/hw2IMdbBd6FfJ98P4QZYFz+PDYgxeEAuQL9OvjogLcPTzglY95T1
-        JlwNY/Fz2MDA0aCeGZr2ZkbowvAnqAvDDmHbg7WYpXWyG8Zg8pmAUHOxTzRdL5PPBEQlTdfL5DMBUUnT
-        9TL5TEAkxdTfBERSTP1NQCTF1N8ERFJM/U1AJMXU3wREUkz9TUAkxdTfBERSTP39gOzWYFB2p97SkJF8
-        eKp4jCr0S5neL+DoLSdAz0GRBtbarT2PxWibE6D/wE1QtMt6eBe6tX8OFv8n/ub/QOkHULQLa+zWnMeA
-        x6LAf3kA3Q5FO+yAfr2Llwa4fAr9hWQaP4Pmf/B8YYD/AhrZvqz5VhjkDAytJNuTrzaZyKPwLxhaUTYv
-        7+FaCyvhG87clXiz2BNQzMZjsLyJrtS8uCzEcvgLdFe8CBdBMTf4HqyPoVvTX6F7R2Qle6G7Mj0LY+5V
-        FeM8At+Hfj1Z42h4Gz2nYn4SXry8Bp+ES6AI8yDcCA9C/2xDL8GYRxXG4GDDx4H9ZHUNsQa+B/k6Inoe
-        8iDXpYs8oX2sI1/tx+3NiafgtzCUOFYffhg+0OIv9wes80G7yuMvV0e+25KPyM3ESvgG9BthsfrwLzG0
-        HOXDlbF0lSe03DQ5U+Xr/DhhagxO2w7BT+BV+C8MbdzXh6eE0HL0Goylqzyh5XzZMecs6iN4APL6Lluq
-        CvAnjCW3PL2FA2Zo5+k7MJbc8vQWzl44YPo7/xus89XOLU+v4eyFAybP0ZR/iXPZ+dzyCCGEEIOBg2cT
-        vaeS3PNlDXe2id5TSe75sqep3lNJ7vmyh6eA0M5Szv3rknu+7Kna4bn0jHLPlz1N94xyz5c9TfeMcs/X
-        CzhbabJnlHs+IYQQYt7AQbLN3lDf8yeFO9Nmb6jv+ZPTdm+o7/mTw694aGco5/iz0vf8yanaoSZ6Q33P
-        n5y2e0N9z5+ctntDfc/fCZyNtNkb6nt+IYQQIhs46HXZ6xn69sfgh+my1zP07Ru67vUMffsGfkVDH4Zy
-        zt42Q9++oeoDpej1DH37hq57PUPfvqHrXs/Qtx+Es4kuez3zbPuj0X9lhXGlnVs6YgAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAW2SURBVHhe7ZndbxRVGMbrhbfitVxhoAZKSQhf5SsURdEA
+        QdHSoggXhCgaUwsoAUkYNRggJpBgMWIUEoqJVLTLxxZokfIlEU3UEGPQGDXGC/0XVB7f0zzvZtt3l57Z
+        3WJh31/ySyfPnJmd8+z0zDStcRzHcRzHcRzHcRzHcRzHcRzHcRzH+Z8Y/SIaxcQty0bWmZ4x65CMeQFw
+        y1A6ZJ3pGfccktrnAbd0Q4esMz11a9BYtxaJW4bSIet0HCcds1ejYc4qtImb3JJsm7MSM1hnPPNW4975
+        K5F9cCXgVsQTC5owivUOzcIVyD66AnAraAuOs96bs2Q5GpY0A8HFy/Hv4mYckp873BKU7qTHG9rnoiZM
+        Z83FWfYUNjzZBARl+xBjp0SWNaEj12cT1jMuTvMTSFqWAcGwzdgpkdR9PrsUyarHgWDYZjyA1UvRGPZV
+        0nBOnj7q/MM9Pq35588n7BuqzwGsWYJEBC14wKAxlTL3WWF70L5CDvf4tMZ0VXDMANYtQiKCFjxg0JhK
+        mfussD1oXyGHe3xaY7oqOGYArY8hEUELHtC6EI0cVznlnDx93PmHe3xa886fD/fftM8BbHgYycZHgGDY
+        ZuyUSOo+Nz+EZMsCIBi2GTslkrrPbfORiKD+BZRJ6j63z0MigvoXUCap+9w5F8muuUAwbDN2SiR1n7tn
+        ItkzCwiGbcZFQQ3u2j0bjXtmolXGb6oG++cqcw5zZw1FkfGp+qxpn4GkvQHoV7YZF+TdBox+pwFXcuOr
+        zDD3vbNwH+soSJo++3l/GhIRtOgB703B3fun4Vre2Kp0/1R8F7pgLQYZE9VnjgNTkBycAgTDNmPDgalo
+        yY2bir/bm/HV3lW4VA2GuYY5582/hbUYYvvMcXgyko8mA8Gwzdgg+zp13MGt8u32Vpdhznk9dbIWQ2yf
+        OY5MwvrOSUDwSH3h/weEh4/s+1PHnfkQ6D1ZXZ6WOev8O+vxV7EHsuzvyBvXxrg4XeMxIzMRCHZNxI1M
+        HToy9diUb1cd3tIx4j99T6P3/DPoqSbDnMPctYf+Tgb1JN0d7u+QY47VYRprvjnZCTjRPQFwK2d2PDKs
+        d2h67seo3loc731Aft3csu2pRSY7Fvew3njOj8P0C2PRJj93uCU4Fi/31UYuO47jOI7jjHBaLyNRGRla
+        r8h+ysgQc56X5HiVkaFSnxU1pkKfVRavXwBURoatlwCVkWGz7FMZGV65DKiMDBtln8rI8KrsUxkZYq4n
+        Zl4x/ZTF3s8BlZFh53lAZWR4Uy5QZWR4TSaqMjJskX0qI8PWi1IaZWSIuZ6YecX0UxaHzwAqI8M++XCV
+        keHtPkBlZHhDylAZGbZJqSojQ0y5MdcTM6+YfsqiOwuojAyHegCVkSFmMjF33HYpVWVk2CmlqowMMdcT
+        M6+Yfsriy2OAysjQdQpQGRkOyCRURoY95wCVkWGXlKoyMsScJ+Z6YuYV009ZXD+KRGVkOHsSUBkZPj4N
+        qIwM+87KHUkZGXZLqSojQ8x5Yq4nZl4x/Qw7V+XbVxkZjnUDKiPDB72AysjQLkuGysgQc56Y64mZ14jg
+        h88AlZEh/79LjAwd8iBTGRn2y12tMjLErN0x1xMzrxHB751IVEaGL+QuUhkZOmU5UBkZYtbumOUl5npi
+        5nXb8E0XoDIyZGQ5UBkZYl77Yh6eMddzR3H9U0BlZDglr3IqI8MRuatVRoasHK8yMsRczx3Fb/JrrDIy
+        nDsBqIwMMXd3zNtLzPVUHZePAyojw0m5q1VGhotyvMrIieHrDKAyMpyRu1plZLhtXh9HGtfkdU9lZOiT
+        5UllZPhWHqwqIyeGH+WBqDIyxCxTt837+0jj108AlZHhqixPKiPDz0cBlZETwx/yRqIyMsQsL3fUH1Aj
+        je9lWVEZObeSn+T5oDJybiW/yLKiMnIcx3Ecx3Ecx3Ecx3Ecx3Ecx3Ecx3ECNTX/AdfulYEvN4B5AAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
