--- a/Smart Home/forms/UserControls/LampControl.resx
+++ b/Smart Home/forms/UserControls/LampControl.resx
@@ -120,34 +120,81 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABjlJREFUeF7t
-        nVeIJUUUQFdMiCjmgDnih4qKYsIsiIIYMScQsx+CHwomMKAYEYyYUcw/YkJURAwYUTFjzmBOmNM5sguX
-        S+vO7k5PV1f3gQPDhHr3Vr9+3VV1u2bayMjIyMjIAFgdD8Az8Q58Ed/Br/HX6fq13/Nn/o6/uz/6tyNz
-        yPy4B96AH+Lfc+gHeD3ujrY9MkHWx8vRd3tTx06GX+FluB6O/Aeb4934FzZ1Yls+jtviyHRWw3uxqbOi
-        P+D9eBYehBvjqrgozjddv/Z7/uxg9Hf9mx+xqc2obwb/drDYgafiz9jUQfopno+ePfPi7OLf2sYFaJtN
-        r6U/4SlobIPCd+Iz2NQp+jDuiHPjZGObO6Gv0fTa+jSujINgN/wGmzriAfTjZqrYFB/EpliMcResmmPx
-        T8zJf4JeF7piZ/S2OMflDcbxWB1zoYO0nLDehAth1yyMN2NTjGdgVXi3k5P0Anoolsbh2HSjUc1BORpz
-        cn4+b4Glsgl+iTnu47DXeAHP14zPcF0sHWM01hi7ufT2Qr8iOkURE/oW+zRdsTbmKRzP7lWwVziwyuMM
-        rxklf0z9F1thvqY4TunV4PE0jAloiRfwiXIE5nxOxl7g3FR+R92KfedGjDl5xvdi7us+jIF/hCWMM+YU
-        xykfY8zNCcmicSoiBqwuMtXC3pjzc9KyWPLZ4dxUbTyEMcd7sEg2wBioOsCqjc0w5uh8V5G38ldgDNR3
-        Uq08gjHXS7EoLBrIAyjXM2rF9ZSYqwPgogon9sQYoKtybSwulcI8mKdVrGYpBkt1YnDnYu1ciDHna7AY
-        ct2UF77acRoo5vw+FsEaGAOzOmROChL6gnNZuZqliJH7gRiDsuxmKDjOirlbtto5eTXQpdqhcDbG3E/H
-        zrkTY1CeMUPhEIy534ad8wLGoKayjKdr8tzd89g53l3EoFbCoeDKYcz9XeycvEy7GA6FJTDm/gV2jg/K
-        xKCGVBfrdEnM/RfsnN8xBjWEMcgMfPPF3H/DzvkOY1A+EjAUFseYuxUpnZOXNV1THwp5lsIppM6xJCYG
-        tT0OhR0w5v4kds7tGIM6EofCMRhzL6K6Jle1X4VD4VqMuRcxdWJVSQzqJRwKr2DM3VrmznHKOQZlQbID
-        ptpZCnMheTGzFBbDxcD2xdrJyw4+gVUMeQn3FqwdZ3ZjztdhMeyHMTjrXhfBWnHwm+uX98FisHY3B1jz
-        7W++3XUOy9rfosi7MThgrJXnMOZ6FxaHp2wMUtfB2vCpqpxnkQXlTkXnByXd1ac2rsSY4+dY7JLDeRiD
-        da2kphVEt9vI6z/nYLEsg95hxYB9R9XC1Rhz80ZmWSyaSzAG7aJNDdseNZ0dF2Px+Dh0DryoutfZJE8k
-        muPy2Auc8Y3BO+djyUxf2Qj/wJhTrz6KLY/JA0V3Cu3jersxO4MdczG33m0e4G5xMQk9EfvGSZjz8Hu9
-        w3vz1zAm4hTDWtgX1sR8pr+Jvd1mdmvMu4w+ij6BVDrG+BjG2M1lS+w1eWpeHUCWzkWY467hbvHf2qW8
-        fZ7vtL2wVFxgi/Hqe1hNmazPcecRvE8flTj56D5Z+ckor30bYlU07ajzFnoGlYK1AG9jjvMwrJI82lX3
-        1SplE8xnMcfnLkDVsgD6UEtO2p0RFsSu8A3h3V+Oy4UoY66aJfENzMl7pnTx8eXavyWgOR4/TpfGQeC0
-        Qy4d0pdxKqcknIXOxW7qXeFgthqfgZ2RH4dTn0LaBttmO/S18uv7WNrgDsYMXE18HXOnODvsI8dtLI3a
-        pqt8uepQX8UVcNB4Qc0bn3Wh20nVXEs2SzjF7VRFnveaCn1NN5IZ0qN4E2ZXbOq0NvU1R/6Hpk5r05GZ
-        0HaHtd1+dbTdYW23Xx1td1jb7VdH2x3WdvvV0XaHtd1+dbTdYW23Xx1td1jb7VdH2x3WdvvV0XaHtd1+
-        dbTdYW23Xx3fY+yw5XCysFo9tu1rjcyEpzB2mv/FZjIOigfD//UR2y5i957SyY8ct+mQdi6abVzRa6pM
-        mWwtqhjXQCaIz+3lZ8EnU+uvin82sDR89x6FT6Ab/Dd17KxoG7blx9R4ZkwCJ2BTR09E/9HlSAvMzkEZ
-        D0bLzMpBGQ/GFDGRgzIejJGRkZGRATFt2j9g0z6BHYyyTwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAABD4SURBVHhe7ZwHeBTXtcdHifN4SZyX+Nn58iUxtjESvRjT
+        hBCIIpAA0S3RBKIKBJEpNjVgCUzvoogqk2K6egeVVcXYpubxsA3CPKopAR4k8YeAx/+dM5y7O5KXIrGs
+        Fnv+3/f7dvacO+eec+fuzJ3dkTRTpkyZMmXKlClTpkyZMmWqjCZ9huoTi9F//D7MGV+MnRP24TBtn6LX
+        6/S+lNG3yUYcmlCMHcRs3id8P16VMKaeVBHAj2hAfScVYz0N4olJ+4CngWJ8xbHeK0YHji3dmCqvKTRb
+        3yvCAuLc+8XAM+IsMZ/7km5NvV+EmpOLsXFyEUqn0CDZ4Z/ky6Q286cUIuS9ArScVog3iZcijuHfGN5m
+        G/k9uY3ethh7aL9/lYuluD2lCBt4H0njh6cIC16cWoQlNAh3phUBRqYW4hLZl9Ord+gB/ER2qbD44Ewv
+        QhuKuZLiXS7fj/S98L09+Lns8sPQjEJ0p4E5O4MGwcj0QuSzjw7OC9LUYeIDSYPdg/otLN8vcWZaAQKk
+        6fdX4emoNrMQUTMLcJ9eYaUAllk0U6VZOcHt92Fo9No4hBPrq4+FhV5PEddpu5Th7dfGoqT6OORyGyL8
+        1XFoyPtKkDKaVQAf6je/XA73iRX8qZFm3y/RrH6VCv/8AyrWwEUqfqA0MQhub4TBh4h5PQxX3hgLVAbZ
+        dzPR9jsHA3D7oACDiUvGnGYV4tOIIvxOWn0/FFGMOpEFOBNJBRrYTQflV9JEl3s4qtUMQ2iNMJS8GQY4
+        khpjcJIYWS+w7AxfwBfzAsSXy+30nCLUlibPt+YUoumcAlwlwMwuwG1irLhFcHMPQ7D7GJz3GAPY4ZL7
+        aGwnxtccA786I1HrtTC8xIPJ8Dbb2EcxJhA7eJ9yMR4wGmeJAdKxLtCngXJ6d04+Sq155uMK5y5Nnk/N
+        yYPH3HxcnksFCf/4MB+dxa2r3li41wqFpfZowEit0bhG9tU0WC2kaQUFN49QtKRYazhW+fi1Q5HjEVZ2
+        GUq5daB8bxryvTrPgjrifr60kM758/JwZn4+oJOHK/RxLzOj6o5EUN1RuFk3FDBwoc4oTGwU7LilIceq
+        E4pJFPtiub7+t95ovCPNdFGezefl46rKm7ZPL3rergkbaMm3IB+fLKQCmAV5uFV28OFWfxQWNhgFKOqP
+        xB16XWxv4Hn1RPcE7egGajbdOyQQx2n7Or3ekSZPJPq0vdhgJJZIX9a+iXmckzTTFlnQjHNW+ROfPVer
+        IyoganEewCzKw+0l9NEWlxYYiB83GomPCCgajsCJRsPRRJpYNbMYTf5Id6zEjZm0XreHNK2QGobiber3
+        ZLkcNnNu0kRbTKfKxRaUGupYIS7X1tI89FhiwX16BbMkz3jBhdtbw/HRWyMARePhSGwxCP8hDXTRxa9x
+        ZD7Sift0ceQL90ORXSos7pNySS6XyybjJ4HyH2+tg2uyuPjN2oZk/GxZLk4vtwAMbe8Wl663h2Fh0+GA
+        gU3GWUfL0n+nc/ByOn3dJWCEzscl9Lp2vgUD6PTQZH4WXuZTnexaKflE4IW3h2OzMSd6P1fc+upoeS7i
+        VT20fXaNBS+K2/W0MheLV1KiOrm4uMKwzm8+DEEEFM2GlZ1tyyxwp5l2WM04fdbl4R6xbWk+vKTZMxDc
+        mg3F5jK5DUdfcWrRdJ9A9Vy21mXBQnG5lqJyUJO4syoXYFbn2O5wPUfAveVQ3CSgE4JE48xfmYXmq3Jw
+        Re0r7FmR45ybIf4ktAhBsjW/objRIhg1xK1RbkMMeZWuyrf5XEarc7FxDSWokwOLmHV5DUGOVwggnDSe
+        89fS4Edn49a6HEAnG9/S6yhxO01ew/GLViH4ypBnlrj0UxHVVaDqo8m1XlyuoSha86/NQWk0DaBOtu2L
+        Ne8hCCagMxh32g62rXY20WlnczauxGQDDG9v3otm4na6vEPQtPUQ3FX5eg1GP3Fpa7PR3lpfDm7TRPm9
+        uKpeG7KxYAMlppONfDFr/uGo1iYY52nQoROMxeLSttAF9y9ZOExAuLIls+rvOinP5YZ8zxi/O6Laiqx1
+        5vC9gwsoIgI/2pSFc5toBgvdxaW1D0YoAaZdMC50Mtxk7cjEsh17AGZ7Jr7dVoUz3yg+FbUfhG8MeY8Q
+        l7YxCz0NdZ7h2sVVdYrJgq/hFHLZtjSEW8dBKCGgMxATH9g1LS4TjWMzcJdewcRnOv+c/yhRvpNV3h0G
+        4YRarfEPRVTvJUO97fUdqlJbsrB+CyUjLBez5jsAPp0HAkyngbhmnP0pGUgnoJOOvWJ2GfkE4kXK+brK
+        32+Q7Zr2UTZWGepdK+aq05+zcIKA4C1mzW8AYvwHADr9sVrMWno6mmSk4X5mOkDcy8h4/FKzcz94VeTj
+        zm15H3lbKfn1R7TKn7Y3iJknXDtV75/24ksxV43o3F39r5SI8K9du9QFC25d++MKAcY/CM0f2DUtNxUb
+        COikYKuYH6ou/dCPYtwlPnqyg0B998O6Lv1xr0sQhoixwqKcPVX+lMMldRriGrlWVfefqnI1RBfOAVv3
+        AszHe5ApZq1bEBp37wcwAUG4rJKn2V+tMAU3CDD5qY+epT1pFgf0wz1rrH6IedRBYB+3MbS/xzHEXUHB
+        jXK/pGJ174/64tC27kGWte5M21LV6aIDMGc7JcFs22NblvUMQjgBnUBsF7O2PxHtP00GmP3JKOEbHHE9
+        RHDrEYRoa6wH8R7ySYAb+deVaRv06AP2OFHfO1WsHoEYJ2aNal1orXsvIsTsfNEScudOWkYytKy0ftx7
+        BWJ970CAoe3xYtYOJmH2oSSAOZj4ZBcwHsDe7yBGxdOh96Ghti/ieNtem6cZfBbFmWiIGS1mXkIPM9S9
+        TczO165MHNpNSTBxe+EpZq1vX+S98w7A9OkDPzFr/5WARALMsfiyv8s+SjyQFCtGxRSOUD9TGdo+Ws73
+        1IPPoty7qpjUT46Ytd2Z8FJ1EwfE7HzRGv5/1Fo+NhWvi1kL7IvTQX0Bpl8v1BSz9mUcjn8VDzAndn/3
+        B5hHiQc0qA9iVNyHQm0cMfgsOgAehtinxKzFZuFNVXdcBr4Ws/OVkIFrCZQEQ5+G/xSz1r83rvXvAzCB
+        gTb7qVj8/es4gDkfj5fF/MTiUw3FPKJil6dfHxw2npqeVgMC8Ioh9lUxa8nJeEXVTTeRVrvTlZSBUgKM
+        bQmqaYN6oXRQb4ChA2C1n9+NUgLMMUP7imhgb0xVsb9DL0yWZg6Rvz+qGeLfFrO+mlN1J2bY7E4X3cmW
+        qjta4wEY3BPfDu4FMKEB+JmYHSKKOU3FLk9wT0yRZg5RcCf83BDb+gAA12q9k6cxELPzlZqGa2l0R8tk
+        Gk5BIT1wLqQnwAztiepifmrx6YViHlWxyzOkh2NPQcP74HVD7Bti1uKz8LKqOy0Nfxez80UfxTMZlAST
+        lYzXxKwN74EjBIQKXWwfJr6wDuuOGENcu3AbR12ER/ZCU2vcHjgpZi0jA2+outPTcFrMzldmKg7tSQN0
+        UtFSzNqIAOSM7A7odLMtQysrHtCRAYixxiRGdMdhYgpD748YfdzWEQdhVAC6GOJaf+XLSEYra91pVbgM
+        zUrDTgLM3lQMFrNG5/1ogs//CO2GGWKulHggKU6MNd4DYkKbGm7EaNtem6c9CJT7LEM86xeKNNmGqrqJ
+        qrsRy07BhzmpAMPbYtZGd8OgsG6AkC7mSghuY7pinSEWwro+bGDhRr5oY1va9wm/wLMv2n+PNVY39Bez
+        lp2K+arunBREitn5yk3BIAslwdB2hpi1P3RHjXFdAWZsV9w0PgFREdGAeo3rgnsqFvHIWc0+bmNtT/ty
+        DHFXSJwz7X9LxXo3wHaNo1r3qrqJJ76jd7gK6cKbT0kI/zhgeFDq3S64QIAJ94ePmCus8K4ICu+CuxTj
+        ib+Oprbr3vXHPdrXelqsqGjf9ip/4pyYNb5/yU/BP1XdPAbiqhoVpuBre18vT/BHFAFmvB8+FnOlNKEL
+        WlfkVMJteR95WylN8MMOlT+xTMxaUQraqHpp8E+IuepUnILNBJiiZCwVszaxCxpO8gN0OuM2zcpfi8vl
+        NSkAr3DOKn86GNbfAqjGFdZ6U1zg+SBKxO+TZIDZl4yLdJdoPd+/3wmfTu4MMO93xjQxu7wmd8JMlTdt
+        7xOzZrHghX1J+EbVW5yMjuKqOvGA76eBVz+0fJoEf3FpUzohZGongJnii5vTO+A34nJZzfDDb6f64pbK
+        e7Kv7TrySQq6Guo8b5xsVarPErH08ySAoW3r9+Z8Lp7mi4PTfQFmWkdsEZfLanpH/EXlS9tHjNeez5Jg
+        UXUS1ofMqlwHaCVwIAmlB/mXLuJQgu1iPMsXHWd2BIT7f/S1PTnhaprVAW04R5Uvvbc+90P1ear6iDsH
+        Db9/uIQOJWLL4URAJ8H2YCuLCkn6oAPAzGqPCzPa4LfichlF+OJ3lN9FlSeRKC5dNKlyVX20HSNm19HR
+        RNQ+moC79ArmcDyCxKXNo3N/ZDtciGwPCJ9E+aOauKtcnEtEe+xX+UW0wyU+IOLWjsZjgKqLazyUAg9x
+        uZb+Fo8V6jdf2r5wIt32GPrsdvD5sB3uEtDxwdYIH8f/T4iKinOgfLarvOa0w53ZbW1Pwh3YhV/+LQEX
+        VV2E9Z7A5fRFIn5xLB7n/5sSZY4lYKe4dM31weR5PoBiblukLPPET8XtdPHMp5zijDkR1mdYWVTHx4Z6
+        Lp6iAyIu19QXCej7RTygOB5n+yM9aHBb0BZLCCjmt0X+Am+8JE2cJu5zQRsUGHOh94vEret4PP5Qrpbe
+        4nJtfRWHaPX0w5dxuE0HpZ24dC3yxtTFbQAFvf9mUVv0EPcz18I28KM+zxpzIMr87Rfl3YHyL1V1EGvE
+        5fqic3+1E7E4cDIO0InFrZKEsn8lv7Q1pi31xv8RYJZ44z7ZNi70fXYf8RU++BX1tVnvS/olOIcyvyXT
+        BGpM+d9Q+Z+Iw+dck7ifD30di9dPxeLcKSpAJxaF4rJqeSt0WN4a5wkYuEVELfJy3L8HiPLGr5e1RuRy
+        L1w39kW2S8u8bXfuSiVxKDDkffZkguN+13aqSmLhcToWl0/H4eTZXfafIl7qg1eiWiEpygsox7crvbB+
+        tTdqSdMyWtka3rTfVIa3xVxGvC/H4FjlYjMJq5vbfzbpVBJ+QxPoOOV+9XQ86or5+dSZXWh6/glmUJQn
+        uq/2RMnqVkA57P7ixPYKtnmAJ86s8sQQXhBIM7s6F4dXOXd5+8PQhqb4yZqWGLq2JUrWegI6Le0PLtsr
+        2KYk2hMh3Ie4TT1M62jg1rcEGN4Wcxk5qo0pO9rQHJEbWwAMb4u5jBzVxpQdxdBgERDsDpyj2piyoy1N
+        EbmlGaBD22IuI0e1MWVHf6bBIiDYHThHtTEl+msTRH78NuAMuC/p1pTSVhqUbU0AZ8B9SbemlLY3RuSO
+        twBnwH1Jt6aUdtOgEBAcPkDPOv5zr9iGmBnXCNBpiPlidpg4porPfYnZlFJ8AwQnNASY+IY4mVQP7uJ6
+        asW+BQ+KW6LixzXAIHGZUkptiJeS6+NGcgPgWZJUH9cTGpf9p+GmRGn10TelHu6k1geeBRw7pcFz8rNi
+        VSm9DjzT6yGduEXAQdxKq4e0zHqV/UfgP2DtqYtIAsJjVy8VbW/qMcqqjZlZdQBmb+3Hr464jWrP+4rZ
+        VGWVXQvBObUBhrZPWh6xOtpbFx7ZtVGi2tMBMFc7T6tCWh3l1cINAhXB4oHrltfN1Y5DlO+OvsSdAg/g
+        SeC2hR7masehKnSHZ3FNpBe/iVv0Crs88KXtq2GudkyZMmXKlClTpkyZMmXKlF1p2v8DswfRsitfW74A
+        AAAASUVORK5CYII=
 </value>
   </data>
 </root>
